@@ -53,7 +53,7 @@ main (void)
     {
       dispatcher1 = epc_dispatcher_new (preferred_name);
 
-      g_assert (EPC_COLLISION_HANDLING_ALTERNATIVE_NAME ==
+      g_assert (EPC_COLLISIONS_CHANGE_NAME ==
                 epc_dispatcher_get_collision_handling (dispatcher1));
 
       if (!epc_dispatcher_run (dispatcher1, &error))
@@ -64,7 +64,7 @@ main (void)
 
       dispatcher2 = epc_dispatcher_new (preferred_name);
 
-      g_assert (EPC_COLLISION_HANDLING_ALTERNATIVE_NAME ==
+      g_assert (EPC_COLLISIONS_CHANGE_NAME ==
                 epc_dispatcher_get_collision_handling (dispatcher2));
 
       if (!epc_dispatcher_run (dispatcher2, &error))
